test/expected/typedef_pa.out
typedef auto *A
        ^
9: error: "auto" not allowed in type definition
